fixing margin at bottom of cta calculator page on small screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11989,4 +11989,5 @@ p {
 
 .enquiry-button-box {
   text-align: center;
-  margin-top: 1rem; }
+  margin-top: 1rem;
+  margin-bottom: 1rem; }
