--- a/sass/calculators/_calculators.scss
+++ b/sass/calculators/_calculators.scss
@@ -152,6 +152,7 @@
 .enquiry-button-box{
     text-align: center;
     margin-top: 1rem;
+    margin-bottom: 1rem; 
 }
 
 
